name:              hackstarter
version:           0.0.0
cabal-version:     >= 1.8
build-type:        Simple

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    exposed-modules: Application
                     AccountEmailForm
                     DuesRateForm
                     DuesTransactions
                     PermissionForm 
                     Foundation
                     Import
                     Model
                     UserForm
                     Settings
                     Util
                     TransactionQueries
                     Settings.StaticFiles
                     Settings.Development
                     Handler.Home
                     Handler.Users
                     Handler.AddUser
                     Handler.Projects
                     Handler.AddProject
                     Handler.Project
                     Handler.User
                     Handler.DuesRates
                     Handler.AddDuesRate
                     Handler.DuesRate
                     Handler.AddLedgerEntry
                     Handler.Ledger
                     Handler.Permissions
                     Handler.Permission
                     Handler.LoginTest
                     Handler.UserPermissionDelete
                     Handler.AddPermission
                     Handler.Utilities
                     Handler.Emails
                     Handler.AddEmail
                     Handler.TransactionTypes
                     Handler.TransactionType
                     Handler.AddTransactionType
                     Handler.Paypal
                     Handler.Bank
                     Handler.Clubs
                     Handler.AddClub
                     Handler.Club
                     Handler.ClubEmailRemove
                     Handler.ClubAccountDelete
                     Handler.AccountEmailRemove
                     Handler.CreatePaypalMembers
                     Handler.Account
                     Handler.AccountDues
                     Handler.AddInternal
                     Handler.DeleteInternal
                     Permissions

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -O0
    else
        ghc-options:   -Wall -O2

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable
                ViewPatterns

    build-depends: base                          
                 , yesod                        
                 , yesod-core                  
                 , yesod-auth                 
                 , yesod-static          
                 , yesod-form            
                 , bytestring            
                 , text                   
                 , persistent            
                 , persistent-postgresql    
                 , persistent-template 
                 , template-haskell
                 , shakespeare        
                 , hjsmin            
                 , monad-control    
                 , wai-extra       
                 , yaml           
                 , http-conduit  
                 , directory     
                 , warp         
                 , data-default
                 , aeson        
                 , conduit         
                 , monad-logger   
                 , fast-logger   
                 , wai-logger   
                 , transformers
                 , esqueleto
                 , time
                 , csv
                 , containers
                 , old-locale

executable         hackstarter
    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    hs-source-dirs:    app
    build-depends:     base
                     , hackstarter
                     , yesod

    ghc-options:       -threaded -O2

test-suite test
    type:              exitcode-stdio-1.0
    main-is:           main.hs
    hs-source-dirs:    tests
    ghc-options:       -Wall

    build-depends: base
                 , hackstarter
                 , yesod-test >= 1.2 && < 1.3
                 , yesod-core
                 , yesod
                 , persistent
                 , persistent-postgresql
                 , resourcet
                 , monad-logger
                 , transformers
                 , hspec
